# ASD-2026

./: .gitignore  README.md  pyproject.toml
asd_2026/brackets_and_masks/: basics.py  binary_ops.py  brackets.py
asd_2026/common/: benchmark_tools.py  carpenter.py  ff.py  ksef.py  plotz.py  sort_benchmark.py  utils.py
asd_2026/divisors/: primes.py  simple.py
asd_2026/fenwick/: f.py
asd_2026/graphs/: a.py  aa.py  bb.py  ggg.py  graph_tools.py  short_paths.py  simple_graph_problems.py  zz.py
asd_2026/graphs/trains/: graph_it.py  one_liner_ideas.py  test_train_possible.py
asd_2026/permut_/: basic.py
asd_2026/rucksack/: a.py  rr.py
asd_2026/seats_on_plane/: a.py  bb.py  fast_min_max.py  gg.py
asd_2026/sorted_collectionz/: a.py  b.py  basic_sorted_lists.py  benchmark_libs_sortedset.py
asd_2026/text_search/: load_file.py  poly_hash_baby_version.py  simple_find.py
